# scripts

./: .gitignore
go/tree-gpt/: README.md  check.go  clipboard.go  cmd_options.go  config.go  file_cmd.go  go.mod  main.go  path.go  tree-gpt  tree_cmd.go
node/: README.md
node/dropDirNumbersAndNest/: README.md  jest.config.mjs  package-lock.json  package.json
node/grabAllGitRepos/: .eslintrc.json  (+3 more)
powershell/: changeFileExtensions.ps1  changePrefix.ps1  changePrefixForAllFilesInCwd.ps1  changeSuffixForAllFilesInCwd.ps1  dirsToLowerCase.ps1  downloadAllReposFromOrg.ps1  filesToLowerCase.ps1  findFileHandles.ps1  formatCodeFiles.ps1  formatImagesOntoTheirOwnLine.ps1  getCurrentDirectoryName.ps1  grabCurrentDir.ps1  removeAllUnusedImages.ps1  removeImagesFromRootAndNestThem.ps1  runScriptAtTheLeafOfEveryDirectory.ps1  setupAlgoQuestion.ps1  setupAlgorithmQuestion.ps1  svgToReactComponent.ps1  toLowerCase.ps1  unzipAllDirs.ps1
rust/tree_gpt/: Cargo.toml  README.md
rust/tree_gpt/config/: config.json
rust/tree_gpt/src/: cli.rs  config.rs  main.rs
rust/tree_gpt/src/commands/: file_cmd.rs  mod.rs  tree_cmd.rs
rust/tree_gpt/src/utils/: check.rs  clipboard.rs  mod.rs
scripts/: checkIfLoginShell  checkIfShellInteractive  findJava  myBash  removeDirAndEmptyContentsRecursively  setupAlgoQuestion  svgToReactComponent  toLower  tree-gpt  treeGPT
sh/: changeFileExtension  changePrefix  deleteAllEmptyDirsRecursively  printFoldersWithPrefix  removePrefixFromFolders  replaceFileExtension  setupAlgoQuestion  setupAlgorithmQuestion
windows/: changePrefixOnAllFiles.ps1
(+44 files in other folders)
